<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="compose">Compose</string>
    <string name="add_account">Add account</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="initial_tweet">I\'m using FireTweet for Unblocked access to Twitter on Android! Download it FREE: http://firetweet.io @GetFireTweet #UnblockedTweeting</string>
    <string name="try_firetweet">Check out FireTweet: A Twitter app for Android that allows for unblocked tweeting from anywhere in the world! https://firetweet.io</string>
    <string name="powered_by">Powered by Lantern</string>
    <string name="add_location">Add location</string>
    <string name="add_image">Add image</string>
    <string name="take_photo">Take photo</string>
    <string name="remove_location">Remove location</string>
    <string name="remove_image">Remove image</string>
    <string name="remove_photo">Remove photo</string>
    <string name="status_hint">What\'s happening?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="not_now">Not Now</string>
    <string name="install_update">Update</string>
    <string name="error_update">Error Downloading Update</string>
    <string name="manual_update">Try manually installing the latest version from &lt;a href="https://firetweet.io">here1&lt;/a></string>
    <string name="update_available">There is a new version of FireTweet available. Would you like to update now?</string>
    <string name="should_send_autotweet">Autotweet: Share FireTweet with your friends</string>
    <string name="welcome_to_firetweet">Welcome to FireTweet</string>
    <string name="sign_in_twitter">Use your Twitter login details</string>
    <string name="rest_base_url">REST Base URL</string>
    <string name="oauth_base_url">OAuth Base URL</string>
    <string name="signing_oauth_base_url">Signing OAuth Base URL</string>
    <string name="signing_rest_base_url">Signing REST Base URL</string>
    <string name="api_url_format">API URL Format</string>
    <string name="same_oauth_signing_url">Use same URL for OAuth signing</string>
    <string name="auth_type">Auth type</string>
    <string name="oauth">OAuth</string>
    <string name="xauth">xAuth</string>
    <string name="basic">Basic</string>
    <string name="twip_o">twip O Mode</string>
    <string name="advanced">Advanced</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="edit_api">Edit API</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="error_occurred">An error occurred, please try again.</string>
    <string name="error_already_logged_in">You have already logged in.</string>
    <string name="no_account_selected">No account selected.</string>
    <string name="empty_account_selection_disallowed">Please select at least one account.</string>
    <string name="error_unknown_error">Error: Unknown error, this is probably a bug.</string>
    <string name="error_message">Error: <xliff:g id="message">%s</xliff:g></string>
    <string name="error_message_with_action">Error while <xliff:g id="action">%1$s</xliff:g>: <xliff:g id="message">%2$s</xliff:g></string>
    <string name="error_message_rate_limit">Twitter\'s rate limit exceeded, please retry <xliff:g id="time">%s</xliff:g></string>
    <string name="error_message_rate_limit_with_action">Twitter\'s rate limit exceeded while <xliff:g id="action">%1$s</xliff:g>, please retry <xliff:g id="time">%2$s</xliff:g></string>
    <string name="select_account">Select account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="label_tweetstore_provider">FireTweet database provider</string>
    <string name="label_refresh_service">Refresh service</string>
    <string name="label_background_operation_service">Background operation service</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="tap_to_load_more">Tap to load more</string>
    <string name="delete">Delete</string>
    <string name="retweet">Retweet</string>
    <string name="retweets">Retweets</string>
    <string name="cancel_retweet">Cancel retweet</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="reply">Reply</string>
    <string name="share">Share</string>
    <string name="view_image">Image</string>
    <string name="view_map">Map</string>
    <string name="view_status">View tweet</string>
    <string name="view_user_profile">User profile</string>
    <string name="browser">Browser</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="statuses">Tweets</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="about">About</string>
    <string name="open_source_license">Open source license</string>
    <string name="api">API</string>
    <string name="default_api_settings">Default API settings</string>
    <string name="default_api_settings_summary">These settings only apply to newly logged-in accounts</string>
    <string name="consumer_key">Consumer key</string>
    <string name="consumer_secret">Consumer secret</string>
    <string name="ignore_ssl_error">Ignore SSL Error</string>
    <string name="ignore_ssl_error_summary">Ignore SSL Error, enable this if you are having problems with custom API server.</string>
    <string name="gzip_compressing">GZip compressing</string>
    <string name="gzip_compressing_summary">Compress all API requests, it can reduce data usage, but may not work on all API servers.</string>
    <string name="storage">Storage</string>
    <string name="database_item_limit">Database size limit</string>
    <string name="database_item_limit_summary">Upper limit of items stored in databases for each account, set to a smaller value to save space and increase loading speed.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Clear stored profile image cache.</string>
    <string name="clear_databases">Clear databases</string>
    <string name="clear_databases_summary">Clear all tweets, profiles, messages. Your account credentials won\'t be lost.</string>
    <string name="look_and_feel">Look and feel</string>
    <string name="display_profile_image">Display profile image</string>
    <string name="image_load_summary">Disabling this will increase list scroll speed and reduce data usage.</string>
    <string name="in_reply_to_name">In reply to <xliff:g id="user_name">%s</xliff:g></string>
    <string name="name_retweeted"><xliff:g id="user_name">%s</xliff:g> retweeted</string>
    <string name="name_and_another_retweeted"><xliff:g id="user_name">%1$s</xliff:g> and another retweeted</string>
    <string name="name_and_count_retweeted"><xliff:g id="user_name">%1$s</xliff:g> and <xliff:g id="retweet_count">%2$d</xliff:g> others retweeted</string>
    <string name="N_retweeted_quantity_one"><xliff:g id="retweet_count">%d</xliff:g> retweet</string>
    <string name="N_retweeted_quantity_other"><xliff:g id="retweet_count">%d</xliff:g> retweets</string>
    <string name="retweeted_by_name">Retweeted by <xliff:g id="user_name">%s</xliff:g></string>
    <string name="retweeted_by_name_with_count">Retweeted by <xliff:g id="user_name">%1$s</xliff:g> and <xliff:g id="retweet_count">%2$d</xliff:g> others</string>
    <string name="retweeted_by_count">Retweeted by <xliff:g id="retweet_count">%d</xliff:g> users</string>
    <string name="users_retweeted_this">Users retweeted this</string>
    <string name="users_favorited_this">Users favorited this</string>
    <string name="reply_to">Reply to <xliff:g id="user_name">%s</xliff:g></string>
    <string name="quote_user">Quote <xliff:g id="user_name">%s</xliff:g></string>
    <string name="time_source"><xliff:g id="time">%1$s</xliff:g> · <xliff:g id="source">%2$s</xliff:g></string>
    <string name="source"><xliff:g id="source">%s</xliff:g></string>
    <string name="filters">Filters</string>
    <string name="users">Users</string>
    <string name="user">User</string>
    <string name="keywords">Keywords</string>
    <string name="sources">Sources</string>
    <string name="refresh">Refresh</string>
    <string name="direct_messages">Messages</string>
    <string name="other_settings">Other settings</string>
    <string name="content_to_notify">Content to notify</string>
    <string name="notifications_type">Notifications type</string>
    <string name="notifications">Notifications</string>
    <string name="accounts">Accounts</string>
    <string name="notification_ringtone">Ringtone</string>
    <string name="notification_light_color">Light Color</string>
    <string name="show_absolute_time">Show absolute time</string>
    <string name="show_absolute_time_summary">Show absolute time in tweets</string>
    <string name="quick_send">Hit \"Enter\" to Send</string>
    <string name="quick_send_summary">Send tweet when hit \"Enter\".</string>
    <string name="preview">Preview</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="silent_notifications">Silent notifications</string>
    <string name="silent_notifications_summary">Disable ringtone/vibrate for notifications</string>
    <string name="indicate_your_status">Indicate your tweet</string>
    <string name="profile_image">Profile image</string>
    <string name="background_toast_notification">Background Toast notification</string>
    <string name="background_toast_notification_summary">Show Toast notification when switched to background</string>
    <string name="no_close_after_status_updated">Keep \"Compose\" open after tweet sent</string>
    <string name="no_close_after_status_updated_summary">A little gift for chatterbox</string>
    <string name="theme">Theme</string>
    <string name="settings_interface">Interface</string>
    <string name="link_highlight_option">Link highlight option</string>
    <string name="card_animation">Card animation</string>
    <string name="name_first">Display name first</string>
    <string name="settings_wizard">Settings wizard</string>
    <string name="cards">Cards</string>
    <string name="general">General</string>
    <string name="background">Background</string>
    <string name="compact_cards">Compact cards</string>
    <string name="compact_cards_summary">Display more cards on screen</string>
    <string name="hidden_settings">Hidden settings</string>
    <string name="force_using_private_apis">Force using private APIs</string>
    <string name="status_text_limit">Tweet text limit</string>
    <string name="compose_now">Compose Now</string>
    <string name="compose_now_summary">Replaces Google Now shortcut for Compose screen</string>
    <string name="compose_now_action">Compose Now action</string>
    <string name="following_only">Your following only</string>
    <string name="following_only_summary">Display notifications from users you follow only.</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="appearance">Appearance</string>
    <string name="profile_image_style">Profile image style</string>
    <string name="media_preview_style">Media preview style</string>
    <string name="open_twitter_links">Open Twitter links</string>
    <string name="register">Register</string>
    <string name="media_preview">Media preview</string>
    <string name="usage_statistics">Usage statistics</string>
    <string name="import_export_settings">Import/Export settings</string>
    <string name="pebble_notifications">Pebble Notifications</string>
    <string name="pebble_notifications_summary">Send Notifications to your Pebble</string>
    <string name="hide_card_actions">Hide card actions</string>
</resources>