<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/other_settings">

    <org.getlantern.firetweet.preference.AutoFixCheckBoxPreference
        android:defaultValue="false"
        android:key="quick_send"
        android:summary="@string/quick_send_summary"
        android:title="@string/quick_send"/>

    <org.getlantern.firetweet.preference.AutoFixCheckBoxPreference
        android:defaultValue="false"
        android:key="no_close_after_tweet_sent"
        android:summary="@string/no_close_after_status_updated_summary"
        android:title="@string/no_close_after_status_updated"/>

    <org.getlantern.firetweet.preference.ComponentStatePreference
        android:name="org.getlantern.firetweet.activity.TwitterLinkHandlerActivity"
        android:key="twitter_link_handler"
        android:title="@string/open_twitter_links"/>

    <org.getlantern.firetweet.preference.ComposeNowPreference
        android:key="compose_now"
        android:summary="@string/compose_now_summary"
        android:title="@string/compose_now"/>

    <org.getlantern.firetweet.preference.SummaryListPreference
        android:defaultValue="compose"
        android:dependency="compose_now"
        android:entries="@array/entries_compose_now_action"
        android:entryValues="@array/values_compose_now_action"
        android:key="compose_now_action"
        android:title="@string/compose_now_action"/>

    <Preference
        android:fragment="org.getlantern.firetweet.fragment.SettingsDetailsFragment"
        android:key="data_profiling_settings"
        android:title="@string/usage_statistics">
        <extra
            android:name="resid"
            android:value="@xml/preferences_usage_statistics"/>
    </Preference>

    <org.getlantern.firetweet.preference.SettingsImportExportPreference
        android:title="@string/import_export_settings"
        android:key="import_export_settings"/>

</PreferenceScreen>
