<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/hidden_settings">

    <Preference android:layout="@layout/header_hidden_settings"/>

    <org.getlantern.firetweet.preference.AutoFixCheckBoxPreference
        android:defaultValue="false"
        android:key="force_using_private_apis"
        android:title="@string/force_using_private_apis"/>
    <org.getlantern.firetweet.preference.SeekBarDialogPreference
        android:defaultValue="10"
        android:key="connection_timeout"
        android:title="@string/connection_timeout"
        app:max="30"
        app:min="5"
        app:progressTextSuffix="s"/>
    <org.getlantern.firetweet.preference.AutoFixCheckBoxPreference
        android:defaultValue="false"
        android:key="ignore_ssl_error"
        android:summary="@string/ignore_ssl_error_summary"
        android:title="@string/ignore_ssl_error"/>
    <org.getlantern.firetweet.preference.AutoFixCheckBoxPreference
        android:defaultValue="true"
        android:key="gzip_compressing"
        android:summary="@string/gzip_compressing_summary"
        android:title="@string/gzip_compressing"/>

    <org.getlantern.firetweet.preference.AutoFixEditTextPreference
        android:defaultValue="140"
        android:inputType="number"
        android:key="status_text_limit"
        android:title="@string/status_text_limit"/>

    <Preference android:title="@string/settings_wizard">
        <intent
            android:targetClass="org.getlantern.firetweet.activity.SettingsWizardActivity"
            android:targetPackage="org.getlantern.firetweet"/>
    </Preference>

</PreferenceScreen>
