<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/notifications">

    <org.getlantern.firetweet.preference.NotificationContentPreference
        android:key="content_to_notify"
        android:title="@string/content_to_notify"/>

    <org.getlantern.firetweet.preference.RingtonePreference
        android:key="notification_ringtone"
        android:title="@string/notification_ringtone"/>

    <org.getlantern.firetweet.preference.ColorPickerPreference
        android:defaultValue="@color/branding_color"
        android:key="notification_light_color"
        android:title="@string/notification_light_color"/>

    <PreferenceCategory
        android:key="cat_notifications_type"
        android:title="@string/notifications_type">
        <org.getlantern.firetweet.preference.NotificationTypePreference
            android:key="notification_type_home"
            android:title="@string/home"
            app:dependencyKey="home_timeline_notification"
            app:dependencyValueDefault="false"
            app:dependencyValues="@array/dependency_values_true"
            app:notificationType="none"/>
        <org.getlantern.firetweet.preference.NotificationTypePreference
            android:key="notification_type_mentions"
            android:title="@string/mentions"
            app:dependencyKey="mentions_notification"
            app:dependencyValueDefault="false"
            app:dependencyValues="@array/dependency_values_true"
            app:notificationType="vibration|light"/>
        <org.getlantern.firetweet.preference.NotificationTypePreference
            android:key="notification_type_direct_messages"
            android:title="@string/direct_messages"
            app:dependencyKey="direct_messages_notification"
            app:dependencyValueDefault="false"
            app:dependencyValues="@array/dependency_values_true"
            app:notificationType="ringtone|vibration|light"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_other_settings"
        android:title="@string/other_settings">
        <org.getlantern.firetweet.preference.AutoFixCheckBoxPreference
            android:defaultValue="false"
            android:key="notification_following_only"
            android:summary="@string/following_only_summary"
            android:title="@string/following_only"/>
    </PreferenceCategory>

</PreferenceScreen>
