<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Firetweet - Twitter client for Android
  ~
  ~  Copyright (C) 2012-2014 Mariotaku Lee <mariotaku.lee@gmail.com>
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:screenOrientation="portrait"
        android:background="#38c6f3">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/firetweet_splash">

            <LinearLayout
                android:id="@+id/sign_in_sign_up"
                android:layout_width="300dp"
                android:layout_height="0dip"
                android:gravity="center_vertical|bottom"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="8dp">

                <android.support.v7.internal.widget.TintButton
                    android:id="@+id/sign_up"
                    style="?android:buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:onClick="onClick"
                    android:textSize="20sp"
                    android:textColor="@color/accent_white"
                    android:background="@drawable/register_btn"
                    android:text="@string/register"/>

                <android.support.v7.internal.widget.TintButton
                    android:id="@+id/sign_in"
                    style="?android:buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:onClick="onClick"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textColor="#38c6f3"
                    android:background="@drawable/sign_in_btn"
                    android:text="@string/sign_in"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="left"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/autotweet_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:checked="true"
                        android:text=""
                        android:clickable="false"
                        />
                    <TextView
                    android:id="@+id/should_send_autotweet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:singleLine="false"
                    android:text="@string/should_send_autotweet"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>

            </LinearLayout>
        <Button
            android:id="@+id/powered_by"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="36dp"
            android:text="@string/powered_by"
            android:textSize="18sp"
            android:textColor="@color/accent_white"
            android:textAppearance="?android:textAppearanceSmall"/>
        </LinearLayout>

    </ScrollView>

</merge>
